--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   background-color: #BFBAB1;
   justify-content: center;
   align-content: center;
+  align-items: center;
   flex-wrap: wrap;
   height: 653px;
 }
@@ -72,7 +73,7 @@ a:hover, a:active {
     font-family: monospace;
     position: absolute;
     right: 355px;
-    top: 130px;
+    top: 260px;
   }
   #residence {
     font-size: 20px;
@@ -81,7 +82,7 @@ a:hover, a:active {
     font-family: monospace;
     position: absolute;
     right: 295px;
-    top: 160px;
+    top: 290px;
   }
 #phone {
   font-size: 20px;
@@ -90,7 +91,7 @@ a:hover, a:active {
   font-family: monospace;
   position: absolute;
   right: 303px;
-  top: 220px;
+  top: 350px;
 }
 #email {
   font-size: 20px;
@@ -99,5 +100,5 @@ a:hover, a:active {
   font-family: monospace;
   position: absolute;
   right: 294px;
-  top: 250px;
+  top: 380px;
 }
