--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   'mySecondarea';
 }
 .grid-item {
-  background-color: #4140FF;
+  background-color: #7A56FF;
   border: 2px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   font-size: 30px;
