--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   font-size: 30px;
   color: white;
   text-shadow: 3px 2px #2C2E2C;
+  background-image: url("http://hd-wallpapersfd.info/wp-content/uploads/HTML/Purple-HD-wallpaper/Purple-HD-wallpaper3.jpg");
 }
 #item1 {
   grid-area: myArea;
