--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
   justify-content: center;
   grid-template-areas:
   'myArea'
-  'mySecondarea';
+  'mySecondarea'
+  'myThirdarea';
 }
 .grid-item {
   background-color: #7A56FF;
@@ -16,18 +17,34 @@
   color: white;
   text-shadow: 3px 2px #2C2E2C;
   background-image: url("http://hd-wallpapersfd.info/wp-content/uploads/HTML/Purple-HD-wallpaper/Purple-HD-wallpaper3.jpg");
+  box-shadow: 5px 10px 10px grey;
+}
+h1 {
+  position: absolute;
+  top: 25px;
+  left: 535px;
+}
+h2 {
+  position: absolute;
+  top: 55px;
+  left: 520px;
 }
 #item1 {
   grid-area: myArea;
   width: 700px;
-  height: 100px;
+  height: 70px;
   border-radius: 15px 15px 0px 0px;
   font-family: sans-serif;
 }
 #item2 {
   grid-area: mySecondarea;
   width: 700px;
-  height: 250px;
+  height: 210px;
+}
+#item3 {
+  grid-area: myThirdarea;
+  width: 700px;
+  height: 70px;
   border-radius: 0px 0px 15px 15px;
 }
 .headOne {
@@ -35,41 +52,49 @@
   font-size: 25px;
 }
 #imgLuca {
-  width: 125px;
-  height:125px;
+  width: 100px;
+  height:100px;
   border: 1px solid black;
   border-radius: 15px;
   float: left;
   position: absolute;
   left: 335px;
-  top: 26px;
+  top: 24px;
 }
 #aboutMe {
   font-size: 20px;
   font-family: monospace;
   position: absolute;
-  top: 160px;
+  top: 145px;
 }
 #aboutInfo {
   font-size: 16px;
   font-family: sans-serif;
   position: absolute;
-  top: 200px;
-}
-#LinkedIn {
-  font-size: 20px;
-  font-family: monospace;
-  position: absolute;
-  top: 300px;
+  top: 185px;
 }
 #Linked {
   font-size: 16px;
   font-family: sans-serif;
   position: absolute;
-  top: 360px;
+  top: 425px;
+}
+#CV {
+  font-size: 16px;
+  font-family: sans-serif;
+  position: absolute;
+  top: 425px;
+  left: 420px;
+}
+#github {
+  font-size: 16px;
+  font-family: sans-serif;
+  position: absolute;
+  top: 425px;
+  left: 500px;
 }
 a:link, a:visited {
-  background-color: #0C29A6;
+  background-color: #8900C4;
   color: white;
   padding: 14px 20px;
   text-align: center;
@@ -78,7 +103,7 @@ a:link, a:visited {
   border-radius: 8px;
 }
 a:hover, a:active {
-  background-color: #081D75;
+  background-color: #690096;
 }
 #age {
   font-size: 20px;
@@ -90,20 +115,20 @@ a:hover, a:active {
   font-size: 20px;
   font-family: monospace;
   position: absolute;
-  top: 215px;
+  top: 190px;
   right: 300px;
 }
 #email {
   font-size: 20px;
   font-family: monospace;
   position: absolute;
-  top: 250px;
+  top: 230px;
   right: 300px;
 }
 #phone {
   font-size: 20px;
   font-family: monospace;
   position: absolute;
-  top: 285px;
+  top: 265px;
   right: 300px;
 }
