--- a/style.css
+++ b/style.css
@@ -20,14 +20,11 @@
   box-shadow: 5px 10px 10px grey;
 }
 h1 {
-  position: absolute;
-  top: 25px;
-  left: 535px;
+  position: relative;
 }
 h2 {
-  position: absolute;
-  top: 55px;
-  left: 520px;
+  position: relative;
+  top: -20px;
 }
 #item1 {
   grid-area: myArea;
@@ -57,41 +54,34 @@ h2 {
   border: 1px solid black;
   border-radius: 15px;
   float: left;
-  position: absolute;
-  left: 335px;
-  top: 24px;
+  position: relative;
+  top: -132px;
 }
 #aboutMe {
   font-size: 20px;
   font-family: monospace;
-  position: absolute;
-  top: 145px;
+  position: relative;
 }
 #aboutInfo {
   font-size: 16px;
   font-family: sans-serif;
-  position: absolute;
-  top: 185px;
+  position: relative;
 }
 #Linked {
   font-size: 16px;
   font-family: sans-serif;
-  position: absolute;
-  top: 425px;
+  position: relative;
 }
 #CV {
   font-size: 16px;
   font-family: sans-serif;
-  position: absolute;
-  top: 425px;
-  left: 420px;
+  position: relative;
+
 }
 #github {
   font-size: 16px;
   font-family: sans-serif;
-  position: absolute;
-  top: 425px;
-  left: 500px;
+  position: relative;
 }
 a:link, a:visited {
   background-color: #8900C4;
@@ -108,27 +98,28 @@ a:hover, a:active {
 #age {
   font-size: 20px;
   font-family: monospace;
-  position: absolute;
-  right: 360px;
+  position: relative;
+  top: -210px;
+  left: 550px;
 }
 #residence {
   font-size: 20px;
   font-family: monospace;
-  position: absolute;
-  top: 190px;
-  right: 300px;
+  position: relative;
+  top: -210px;
+  left: 490px;
 }
 #email {
   font-size: 20px;
   font-family: monospace;
-  position: absolute;
-  top: 230px;
-  right: 300px;
+  position: relative;
+  top: -220px;
+  left: 495px;
 }
 #phone {
   font-size: 20px;
   font-family: monospace;
-  position: absolute;
-  top: 265px;
-  right: 300px;
+  position: relative;
+  top: -230px;
+  left: 499px;
 }
